[package]
name = "rusty-dungeon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.20", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.4"
tui = { version = "0.15", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
strum = "0.21"
strum_macros = "0.21"
